--- a/skin/tt-theme-default.css
+++ b/skin/tt-theme-default.css
@@ -24,36 +24,36 @@
 
 #tt-treechildren::-moz-tree-image(tt-soundplaying),
 #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio);
 }
 
 #tt-treechildren::-moz-tree-image(tt-soundplaying, hover),
 #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-hover);
 }
 
 #tt-treechildren::-moz-tree-image(tt-muted),
 #tt-treechildren-feedback::-moz-tree-image(tt-muted) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted);
 }
 
 #tt-treechildren::-moz-tree-image(tt-muted, hover),
 #tt-treechildren-feedback::-moz-tree-image(tt-muted, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-hover);
 }
 
 #tt-treechildren::-moz-tree-image(tt-soundplaying, selected),
 #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, selected),
 #tt-treechildren::-moz-tree-image(tt-soundplaying, selected, hover),
 #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, selected, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-white-hover);
 }
 
 #tt-treechildren::-moz-tree-image(tt-muted, selected),
 #tt-treechildren-feedback::-moz-tree-image(tt-muted, selected),
 #tt-treechildren::-moz-tree-image(tt-muted, selected, hover),
 #tt-treechildren-feedback::-moz-tree-image(tt-muted, selected, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-white-hover);
 }
 
 /* I don't know why but .tt-treechildren doesn't work with audio indicator icons. IDs are required here. */
