--- a/skin/tt-theme-mimic.css
+++ b/skin/tt-theme-mimic.css
@@ -203,22 +203,22 @@
 
 :root[devtoolstheme="dark"] #tt-treechildren::-moz-tree-image(tt-soundplaying),
 :root[devtoolstheme="dark"] #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-white);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-white);
 }
 
 :root[devtoolstheme="dark"] #tt-treechildren::-moz-tree-image(tt-soundplaying, hover),
 :root[devtoolstheme="dark"] #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-white-hover);
 }
 
 :root[devtoolstheme="dark"] #tt-treechildren::-moz-tree-image(tt-muted),
 :root[devtoolstheme="dark"] #tt-treechildren-feedback::-moz-tree-image(tt-muted) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-white);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-white);
 }
 
 :root[devtoolstheme="dark"] #tt-treechildren::-moz-tree-image(tt-muted, hover),
 :root[devtoolstheme="dark"] #tt-treechildren-feedback::-moz-tree-image(tt-muted, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-white-hover);
 }
 
 /* Black icons */
@@ -240,32 +240,32 @@
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-soundplaying),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio);
 }
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-muted),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-muted) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted);
 }
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-soundplaying, selected),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, selected) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-white-hover);
 }
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-muted, selected),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-muted, selected) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-white-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-white-hover);
 }
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-soundplaying, hover),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-soundplaying, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-hover);
 }
 
 :root[devtoolstheme="light"] #tt-treechildren::-moz-tree-image(tt-muted, hover),
 :root[devtoolstheme="light"] #tt-treechildren-feedback::-moz-tree-image(tt-muted, hover) {
-	list-style-image: url(chrome://browser/skin/tabbrowser/tab-audio.svg#tab-audio-muted-hover);
+	list-style-image: url(chrome://tabtree/skin/tab-audio.svg#tab-audio-muted-hover);
 }
 
 /* I don't know why but .tt-treechildren doesn't work with audio indicator icons. IDs are required here. */
